--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
